--- a/package.json
+++ b/package.json
@@ -29,5 +29,11 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
     "vite": "^7.2.4"
+    
+    "@capacitor/cli": "^5.0.0",
+"@capacitor/core": "^5.0.0",
+"@capacitor/ios": "^5.0.0"
+
+    
   }
 }
