--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -2,5 +2,7 @@
   "appId": "com.babykeeper.app",
   "appName": "BabyKeeper",
   "webDir": "dist",
-  "bundledWebRuntime": false
+  "server": {
+    "androidScheme": "https"
+  }
 }
