--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,8 +1,5 @@
 {
   "appId": "com.babykeeper.app",
   "appName": "BabyKeeper",
-  "webDir": "dist",
-  "server": {
-    "androidScheme": "https"
-  }
+  "webDir": "dist"
 }
