--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-  "appId": "com.babykeeper.app",
+  "appId": "fr.babykeeper.app",
   "appName": "BabyKeeper",
   "webDir": "dist",
   "bundledWebRuntime": false
